<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/onBoardingImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.40"
        tools:srcCompat="@drawable/ic_onboard_one" />

    <TextView
        android:id="@+id/onBoardingTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="@+id/onBoardingImage"
        app:layout_constraintStart_toStartOf="@+id/onBoardingImage"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingImage"
        tools:text="Title" />

    <TextView
        android:id="@+id/onBoardingDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="@+id/onBoardingTitle"
        app:layout_constraintStart_toStartOf="@+id/onBoardingTitle"
        app:layout_constraintTop_toBottomOf="@+id/onBoardingTitle"
        tools:text="SubTitle" />

    <LinearLayout
        android:id="@+id/layoutDots"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/dotOne"
            android:layout_width="18dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/lightGray"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dotTwo"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/lightGray"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dotThree"
            android:layout_width="18dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dot"
            android:textColor="@color/lightGray"
            android:textSize="32sp"
            android:textStyle="bold" />

    </LinearLayout>

    <TextView
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/nextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        android:text="@string/next"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.97"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_btn_txt"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>